Day-30(Review-2)/Terraform/k8s_rendered/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medishift-dev
  labels:
    name: medishift-dev
