Day-30(Review-2)/Terraform/k8s_rendered/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: medishift-auth-service
  namespace: medishift-dev
spec:
  selector:
    app: medishift-auth-service
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: medishift-staff-service
  namespace: medishift-dev
spec:
  selector:
    app: medishift-staff-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: medishift-shift-service
  namespace: medishift-dev
spec:
  selector:
    app: medishift-shift-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: medishift-leave-service
  namespace: medishift-dev
spec:
  selector:
    app: medishift-leave-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: medishift-frontend-service
  namespace: medishift-dev
spec:
  selector:
    app: medishift-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
